ecommerce-k8s/base/networking/network-policies/00-default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: default-deny-ingress
    namespace: ecommerce
spec:
    podSelector: {}
    policyTypes:
        - Ingress
