ecommerce-k8s/base/networking/network-policies/02-allow-mongo-clients.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mongo-clients
  namespace: ecommerce
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mongodb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: product-service
      ports:
        - protocol: TCP
          port: 27017
