ecommerce-k8s/base/networking/network-policies/06-allow-monitoring-to-ecommerce.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-monitoring-to-ecommerce
  namespace: ecommerce
spec:
  podSelector:
    matchLabels:
      observability: enabled

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 8080
