ecommerce-k8s/base/networking/network-policies/07-allow-ecommerce-to-otel.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ecommerce-to-otel
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: otel-collector

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ecommerce
      ports:
        - protocol: TCP
          port: 4317
        - protocol: TCP
          port: 4318
