ecommerce-k8s/base/networking/network-policies/08-allow-monitoring-internal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-monitoring-internal
    namespace: monitoring
spec:
    podSelector: {}

    policyTypes:
        - Ingress

    ingress:
        - from:
              - namespaceSelector:
                    matchLabels:
                        kubernetes.io/metadata.name: monitoring
