ecommerce-k8s/base/networking/network-policies/09-allow-notification-to-mailpit.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-notification-to-mailpit
  namespace: ecommerce
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mailpit
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: notification-service
      ports:
        - protocol: TCP
          port: 1025
